@@ -39,7 +39,6 @@ import pl.allegro.tech.hermes.domain.topic.preview.MessagePreviewRepository;
 import pl.allegro.tech.hermes.management.config.TopicProperties;
 import pl.allegro.tech.hermes.management.domain.Auditor;
 import pl.allegro.tech.hermes.management.domain.auth.RequestUser;
-import pl.allegro.tech.hermes.management.domain.blacklist.TopicBlacklistService;
 import pl.allegro.tech.hermes.management.domain.dc.DatacenterBoundRepositoryHolder;
 import pl.allegro.tech.hermes.management.domain.dc.MultiDatacenterRepositoryCommandExecutor;
 import pl.allegro.tech.hermes.management.domain.dc.RepositoryManager;
@@ -65,7 +64,6 @@ public class TopicService {
 
   private final TopicMetricsRepository metricRepository;
   private final MultiDCAwareService multiDCAwareService;
-  private final TopicBlacklistService topicBlacklistService;
   private final TopicValidator topicValidator;
   private final TopicContentTypeMigrationService topicContentTypeMigrationService;
   private final Clock clock;
@@ -86,7 +84,6 @@ public class TopicService {
       TopicProperties topicProperties,
       SchemaService schemaService,
       TopicMetricsRepository metricRepository,
-      TopicBlacklistService topicBlacklistService,
       TopicValidator topicValidator,
       TopicContentTypeMigrationService topicContentTypeMigrationService,
       Clock clock,
@@ -101,7 +98,6 @@ public class TopicService {
     this.topicProperties = topicProperties;
     this.schemaService = schemaService;
     this.metricRepository = metricRepository;
-    this.topicBlacklistService = topicBlacklistService;
     this.topicValidator = topicValidator;
     this.topicContentTypeMigrationService = topicContentTypeMigrationService;
     this.clock = clock;
@@ -136,9 +132,6 @@ public class TopicService {
     removeSchema(topic);
     if (!topicProperties.isAllowRemoval()) {
       throw new TopicRemovalDisabledException(topic);
-    }
-    if (topicBlacklistService.isBlacklisted(topic.getQualifiedName())) {
-      topicBlacklistService.unblacklist(topic.getQualifiedName(), removedBy);
     }
     removeTopic(topic, removedBy);
   }
@@ -294,9 +287,7 @@ public class TopicService {
 
   public Optional<byte[]> preview(TopicName topicName, int idx) {
     List<byte[]> result =
-        loadMessagePreviewsFromAllDc(topicName).stream()
-            .map(MessagePreview::getContent)
-            .collect(toList());
+        loadMessagePreviewsFromAllDc(topicName).stream().map(MessagePreview::getContent).toList();
 
     if (idx >= 0 && idx < result.size()) {
       return Optional.of(result.get(idx));
